# gazette

./: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yml  app.py  build.py  config.toml  docker-compose-dev.yml  docker-compose.yml  entrypoint.sh  gazette.toml  go.mod  go.sum  main.py  package-lock.json  package.json  pyproject.toml  sws.toml
.github/workflows/: docker.yml
build_tools/: check_feeds.py  compress_all.py  convert_icons.py  download_daisy.py  download_images.py  generate_opml.py
data/: config.toml  feeds.txt  index.html  index.json  manifest.json
data/.well-known/: assetlinks.json
data/static/: index.html  index.json  style.css  style.min.css
models/: models.py
src/: config.go  feed.go  main.go  post.go  tailwind.css
static/: 404.html  404.html.br  csp-hash.txt  csp-hash.txt.br  feeds.opml  feeds.opml.br  index.js  index.json  llms-full.txt  llms-full.txt.br  llms.txt  llms.txt.br  manifest.json  manifest.json.br  privacy.html.br  robots.txt  robots.txt.br  site.webmanifest  sitemap.xml  sitemap.xml.br  sources.html.br  style.css  style.min.css  sw.js  sw.js.br
static/.well-known/: assetlinks.json.br  security.txt  security.txt.br
static/css/: daisy.min.css  daisy.min.css.br  style.css  style.css.br  style.min.css  style.min.css.br
static/favicons/: acrimed.org-large.avif  acrimed.org-large.avif.br  acrimed.org.avif  acrimed.org.avif.br  afriquexxi.info-large.avif  afriquexxi.info-large.avif.br  (+213 more)
templates/: badge.html  category.html  dock.html  docker-compose.yml  feed.xml  feeds.opml  footer.html  head.html  header.html  ilblogo.html  index.html  llms-full.txt  navbar.html  plus.html  posts.html  privacy.html  script.html  source.html  sources.html
utils/: __init__.py  db.py  logs.py  models.py  utils.py
(+88 files in other folders)
